--- a/docs/demo-withserver/package.json
+++ b/docs/demo-withserver/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel": "^5.8.23"
+    "babel": "^5.8.23",
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3"
   }
 }
