--- a/docs/demo-withserver/package.json
+++ b/docs/demo-withserver/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel": "^5.8.23",
     "body-parser": "^1.14.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "mysql": "^2.9.0"
   }
 }
