--- a/docs/demo-withserver/package.json
+++ b/docs/demo-withserver/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "watch": "watch 'npm start' src/"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "express": "^4.13.3",
     "mysql": "^2.9.0",
     "tv4": "^1.2.7"
+  },
+  "devDependencies": {
+    "watch": "^0.16.0"
   }
 }
