--- a/docs/demo-withserver/package.json
+++ b/docs/demo-withserver/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "watch": "watch 'npm start' src/"
+    "watch": "nodemon -e 'src/ | server.js' index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,6 @@
     "tv4": "^1.2.7"
   },
   "devDependencies": {
-    "watch": "^0.16.0"
+    "nodemon": "^1.7.3"
   }
 }
